Added postgres data jpa