@@ -1,6 +1,7 @@
 package com.spring.project.springproject.student;
 
 import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.stereotype.Service;
@@ -9,7 +10,7 @@ import org.springframework.stereotype.Service;
 public class StudentService {
 
 	public List<Student> getStudent() {
-		return List.of(new Student(1L, "Subhasish", "subhasish064@gmail.com", LocalDate.of(1991, 05, 25), 29));
+		return Arrays.asList(new Student(1, "Subhasish", "subhasish064@gmail.com", LocalDate.of(1991, 05, 25), 29));
 	}
 
 }
